# blacks-tiny-render

./: CMakeLists.txt
include/: buffer.h  camera.h  cubemap.h  displayer.h  geometry.h  image.h  light.h  loader.h  material.h  matrix4.h  mesh.h  orbitControl.h  rasterizer.h  renderer.h  scene.h  shader.h  vector2.h  vector3.h  vector4.h
libs/: pngimage.cpp  pngimage.h  sdl2.cpp  sdl2.h  tgaimage.cpp  tgaimage.h
offline/: CMakeLists.txt  main.cpp
offline/include/: imageBasedLighting.h
src/: camera.cpp  geometry.cpp  loader.cpp  main.cpp  material.cpp  mesh.cpp  orbitControl.cpp  rasterizer.cpp  renderer.cpp  scene.cpp  shader.cpp
